Prepare release 1.7.0.dev0. (#5699)